--- a/com.sparta.msa_exam.order/src/main/resources/application.yml
+++ b/com.sparta.msa_exam.order/src/main/resources/application.yml
@@ -13,6 +13,20 @@ spring:
         format_sql: true
         show_sql: true
         use_sql_comments: true
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      username: default
+      password: systempass
+
+management:
+  zipkin:
+    tracing:
+      endpoint: "http://localhost:9411/api/v2/spans"
+  tracing:
+    sampling:
+      probability: 1.0
 
 server:
   port: 19092
