--- a/com.sparta.msa_exam.product/src/main/resources/application.yml
+++ b/com.sparta.msa_exam.product/src/main/resources/application.yml
@@ -1,10 +1,8 @@
 spring:
+  profiles:
+    active: dev
   application:
     name: product-service
-  datasource:
-    url: jdbc:mysql://localhost:3306/msa
-    username: root
-    password: 1234
   jpa:
     properties:
       hibernate:
