--- a/com.sparta.msa_exam.order/src/main/resources/application-dev.yml
+++ b/com.sparta.msa_exam.order/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/msa
+    url: jdbc:mysql://localhost:3306/msa_exam
     username: root
-    password: 1234
+    password: password
